--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,18 @@
 click==8.1.3
 colorama==0.4.4
 Flask==2.1.2
+fonttools==4.33.3
 importlib-metadata==4.11.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
+kiwisolver==1.4.2
 MarkupSafe==2.1.1
 numpy==1.22.4
+Pillow==9.1.1
+pyparsing==3.0.9
+python-dateutil==2.8.2
 pytz==2022.1
 six==1.16.0
+tqdm==4.64.0
 Werkzeug==2.1.2
 zipp==3.8.0
