--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 absl-py==1.1.0
 astunparse==1.6.3
+attrs==21.4.0
 cachetools==5.2.0
 certifi==2022.5.18.1
 charset-normalizer==2.0.12
 click==8.1.3
 colorama==0.4.4
+flasgger==0.9.5
 Flask==2.1.2
 flatbuffers==1.12
 gast==0.4.0
@@ -15,13 +17,16 @@ grpcio==1.46.3
 h5py==3.7.0
 idna==3.3
 importlib-metadata==4.11.4
+importlib-resources==5.7.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jsonschema==4.6.0
 keras==2.9.0
 Keras-Preprocessing==1.1.2
 libclang==14.0.1
 Markdown==3.3.7
 MarkupSafe==2.1.1
+mistune==2.0.2
 numpy==1.22.4
 oauthlib==3.2.0
 opt-einsum==3.3.0
@@ -31,8 +36,10 @@ protobuf==3.19.4
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pyparsing==3.0.9
+pyrsistent==0.18.1
 python-dateutil==2.8.2
 pytz==2022.1
+PyYAML==6.0
 requests==2.28.0
 requests-oauthlib==1.3.1
 rsa==4.8
