--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,11 @@ certifi==2022.5.18.1
 charset-normalizer==2.0.12
 click==8.1.3
 colorama==0.4.4
+cycler==0.11.0
 flasgger==0.9.5
 Flask==2.1.2
 flatbuffers==1.12
+fonttools==4.33.3
 gast==0.4.0
 google-auth==2.7.0
 google-auth-oauthlib==0.4.6
@@ -23,15 +25,18 @@ Jinja2==3.1.2
 jsonschema==4.6.0
 keras==2.9.0
 Keras-Preprocessing==1.1.2
+kiwisolver==1.4.2
 libclang==14.0.1
 Markdown==3.3.7
 MarkupSafe==2.1.1
+matplotlib==3.5.2
 mistune==2.0.2
 numpy==1.22.4
 oauthlib==3.2.0
 opt-einsum==3.3.0
 packaging==21.3
 pandas==1.4.2
+Pillow==9.1.1
 protobuf==3.19.4
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
