--- a/docs/home.yml
+++ b/docs/home.yml
@@ -1,9 +1,7 @@
 Home Page
 This specification is taken from ./docs/home.yml external YAML file
 ---
-parameters:
-  - name: Home Page
-    in: '/'
+
 responses:
   200:
-    description: Content desciption about application
+    description: desciption about application
