--- a/docs/predict_post.yml
+++ b/docs/predict_post.yml
@@ -1,9 +1,37 @@
 Predict Page
-This specification is taken from ./docs/predict_post.yml external YAML file
+This specification is taken from ./docs/predict_get.yml external YAML file
 ---
 parameters:
-  - name: Predict Page
-    in: '/predict'
+  - name: input_1
+    in: formData
+    type: number
+    required: True
+    description: value in 5 days ago
+
+  - name: input_2
+    in: formData
+    type: number
+    required: True
+    description: value in 4 days ago
+
+  - name: input_3
+    in: formData
+    type: number
+    required: True
+    description: value in 3 days ago
+
+  - name: input_4
+    in: formData
+    type: number
+    required: True
+    description: value in 2 days ago
+
+  - name: input_5
+    in: formData
+    type: number
+    required: True
+    description: value in 1 days ago
+
 responses:
-  201:
-    description: Return predict value
+  200:
+    description: GUI input form
